[gd_scene load_steps=2 format=3 uid="uid://bcf8p6slso8sg"]

[ext_resource type="Script" path="res://levels/options_menu.gd" id="1_m8do1"]

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m8do1")

[node name="options menu label" type="Label" parent="."]
layout_mode = 2
offset_right = 480.0
offset_bottom = 23.0
text = "Options"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 104.0
offset_top = 40.0
offset_right = 329.0
offset_bottom = 63.0
text = "Disable glitch effect on death"

[node name="Label2" type="Label" parent="."]
layout_mode = 2
offset_left = 399.0
offset_top = 39.0
offset_right = 466.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Enabled"

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 2
offset_left = 341.0
offset_top = 40.0
offset_right = 385.0
offset_bottom = 64.0
button_pressed = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 224.0
offset_right = 326.0
offset_bottom = 255.0
text = "Return to Main menu"

[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
